--- a/homework.tex
+++ b/homework.tex
@@ -37,7 +37,6 @@
 \IfFileExists{bookmark.sty}{\usepackage{bookmark}}{\usepackage{hyperref}}
 \hypersetup{
   pdftitle={多元统计分析期末作业},
-  pdfauthor={统计1701 尹恒},
   hidelinks,
   pdfcreator={LaTeX via pandoc}}
 \urlstyle{same} % disable monospaced font for URLs
@@ -113,8 +112,8 @@
 \usepackage{ctex}
 
 \title{多元统计分析期末作业}
-\author{统计1701 尹恒}
-\date{2020/5/18}
+\author{}
+\date{\vspace{-2.5em}2020/5/18}
 
 \begin{document}
 \maketitle
@@ -210,8 +209,8 @@
 
 \begin{longtable}[]{@{}cccccc@{}}
 \toprule
-变量 & \(\hat{e}_{1}\) & \(\hat{e}_{2}\) & \(\hat{e}_{3}\) & \(\hat{e}_{4}\) &
-\(\hat{e}_{5}\)\tabularnewline
+变量 & \(e_{1}\) & \(e_{2}\) & \(e_{3}\) & \(e_{4}\) &
+\(e_{5}\)\tabularnewline
 \midrule
 \endhead
 独立性 & 0.579 & - & 0.643 & 0.309 & 0.386\tabularnewline
@@ -219,7 +218,7 @@
 仁爱心 & -0.524 & 0.219 & -0.119 & 0.734 & 0.352\tabularnewline
 顺从性 & -0.493 & -0.572 & 0.422 & -0.304 & 0.398\tabularnewline
 领导能力 & 0.380 & -0.494 & -0.612 & - & 0.478\tabularnewline
-方差（$\hat{\lambda} $） & 68.752 & 31.509 & 23.101 & 16.354 &
+方差（$\lambda$） & 68.752 & 31.509 & 23.101 & 16.354 &
 2.392\tabularnewline
 占总方差的累计百分比 & 0.484 & 0.706 & 0.868 & 0.983 &
 1.000\tabularnewline
@@ -300,8 +299,8 @@
 
 \begin{longtable}[]{@{}cccccc@{}}
 \toprule
-变量 & \(\hat{e}_{1}\) & \(\hat{e}_{2}\) & \(\hat{e}_{3}\) & \(\hat{e}_{4}\) &
-\(\hat{e}_{5}\)\tabularnewline
+变量 & \(e_{1}\) & \(e_{2}\) & \(e_{3}\) & \(e_{4}\) &
+\(e_{5}\)\tabularnewline
 \midrule
 \endhead
 独立性 & 0.521 & - & 0.667 & 0.253 & 0.460\tabularnewline
@@ -309,7 +308,7 @@
 仁爱心 & -0.548 & - & -0.115 & 0.733 & 0.386\tabularnewline
 顺从性 & -0.439 & -0.491 & 0.295 & -0.525 & 0.451\tabularnewline
 领导能力 & 0.469 & -0.361 & -0.648 & - & 0.480\tabularnewline
-方差（$\hat{\lambda}$） & 2.197 & 1.368 & 0.756 & 0.589 &
+方差（$\lambda$） & 2.197 & 1.368 & 0.756 & 0.589 &
 0.090\tabularnewline
 占总方差的累计百分比 & 0.439 & 0.713 & 0.864 & 0.981 &
 1.000\tabularnewline
@@ -321,8 +320,8 @@
 \hypertarget{bux89e3ux91caux6837ux672cux4e3bux6210ux5206.}{%
 \subsubsection{(b)解释样本主成分.}\label{bux89e3ux91caux6837ux672cux4e3bux6210ux5206.}}
 
-选取的三个样本主成分为：
-$$ 
+选取的三个样本主成分为： 
+$$
 y_{1}=0.579\times x_{1}-0.524\times x_{3}-0.493\times x_{4}+0.380\times x_{5}
 $$
 $$
@@ -339,7 +338,7 @@ $$
 第三主成分占总方差的16.3\%，是五个因素的线性组合，表现更一般的情况，各种因素都会影响秘鲁青年心理状况。
 
 \hypertarget{cux7528ux524dux4e24ux4e2aux4e3bux6210ux5206ux7684ux503cux5c06y_1y_2ux7684ux503cux753bux5728ux56feux4e2d}{%
-\subsubsection{\texorpdfstring{(c)用前两个主成分的值，将$(\hat{y_{1}},\hat{y_{2}})$的值画在图中}{(c)用前两个主成分的值，将(y\_\{1\},y\_\{2\})的值画在图中}}\label{cux7528ux524dux4e24ux4e2aux4e3bux6210ux5206ux7684ux503cux5c06y_1y_2ux7684ux503cux753bux5728ux56feux4e2d}}
+\subsubsection{\texorpdfstring{(c)用前两个主成分的值，将\((y_{1},y_{2})\)的值画在图中}{(c)用前两个主成分的值，将(y\_\{1\},y\_\{2\})的值画在图中}}\label{cux7528ux524dux4e24ux4e2aux4e3bux6210ux5206ux7684ux503cux5c06y_1y_2ux7684ux503cux753bux5728ux56feux4e2d}}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -403,6 +402,17 @@ $$
 \KeywordTok{library}\NormalTok{(psych)}
 \end{Highlighting}
 \end{Shaded}
+
+\begin{verbatim}
+## 
+## Attaching package: 'psych'
+\end{verbatim}
+
+\begin{verbatim}
+## The following objects are masked from 'package:ggplot2':
+## 
+##     %+%, alpha
+\end{verbatim}
 
 \begin{Shaded}
 \begin{Highlighting}[]
@@ -833,11 +843,11 @@ $$
 
 \begin{verbatim}
 ##  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 26 27 
-##  3  4  8  8  4  3  3  3  1  3  8  8  8  5  7  8  5  8  6  8  8  5  1  5  8  8 
+##  5  6  1  1  6  5  4  4  8  5  1  1  1  3  2  1  3  1  5  1  1  8  8  3  1  1 
 ## 28 29 30 31 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 
-##  5  5  2  8  5  5  8  1  8  7  8  8  3  1  8  1  4  8  8  5  8  5  8  2  8  5 
+##  3  3  7  1  3  1  1  8  1  2  1  1  4  3  1  8  6  1  1  8  1  3  1  7  1  8 
 ## 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 73 74 75 76 
-##  8  7  7  1  5  1  1  4  8  3  1  6  8  3  5  7  3  6  3  4
+##  1  2  2  8  3  8  8  6  4  4  8  5  1  4  3  2  5  5  5  6
 \end{verbatim}
 
 \begin{Shaded}
@@ -864,11 +874,11 @@ $$
 
 \begin{verbatim}
 ##  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 26 27 
-##  2  6 11 16  6  2  9  9 10 16 12 12 13 13  3 12  8 11 14 16 11  8  4  5 11 13 
+## 16  5 10  3  5 16 13 13  7  3  2  2  8  8 14  2 11 10 15  3 10 11  4  6 10  8 
 ## 28 29 30 31 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 
-## 13  5 15 12  8 13 12  4  8  3 11 12  9  5 11 10  1 13 11  4 13 13 13 15 12  8 
+##  8  6  1  2 11  8  2  4 11 14 10  2  9  6 10  7 12  8 10  4  8  8  8  1  2 11 
 ## 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 73 74 75 76 
-## 11  3  1  4  8  4 10  6 13  9  4 14 12  9  8  3  2 14  2  7
+## 10 14 12  4 11  4  7  5  9  9  4 15  2 13 11 14 16 15 16 12
 \end{verbatim}
 
 \begin{Shaded}
@@ -895,11 +905,11 @@ $$
 
 \begin{verbatim}
 ##  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22 23 24 26 27 
-##  2 25 27 22 25  2 20 20  4 22 11 11 23 29 18 11 24 21 17 21 23  3  1 32 23 26 
+## 17  2  4  1  2 17  3  3 19  1  9  9 28  5 29  9 10 12 27 12 28  6  7 16 28  5 
 ## 28 29 30 31 32 33 35 36 37 38 39 40 41 42 43 44 45 46 47 48 49 50 51 52 53 54 
-## 26 19 10  9 29 26  9  1  9 28 27 11 13 28  6  4 15 21 23  3 26 16 26 12 11  3 
+##  5 22 24 26 22  5 26  7 26 30  4 23 25 30 28 19 15 12 28  6  5 21  5 24  9  6 
 ## 55 56 57 58 59 60 61 62 63 64 65 66 67 68 70 71 73 74 75 76 
-## 27 18  8  3 16  3  5 25 13 13  1 14 11 30 24  8  2  7  2 31
+##  4 29 18 32 21 32 31  2 25 25  7 14 23  8 10 18 20 13 17 11
 \end{verbatim}
 
 \begin{Shaded}
